--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.6",
-    "@eslint/js": "^9.33.0",
-    "@playwright/test": "^1.54.2",
+    "@eslint/js": "9.34.0",
+    "@playwright/test": "1.55.0",
     "@sveltejs/adapter-static": "^3.0.9",
-    "@sveltejs/kit": "^2.31.1",
+    "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.2",
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.1",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.11.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "knip": "^5.62.0",
+    "knip": "^5.63.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "sass": "^1.90.0",
-    "svelte": "^5.38.1",
+    "sass": "^1.91.0",
+    "svelte": "^5.38.6",
     "svelte-check": "^4.3.1",
     "syncpack": "^13.0.4",
-    "typedoc": "^0.28.10",
+    "typedoc": "^0.28.12",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
+    "typescript-eslint": "^8.42.0",
+    "vite": "^7.1.4",
     "vite-plugin-devtools-json": "^1.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
