--- a/my-canister-dapp-js/vite-plugin-canister-dapp/package.json
+++ b/my-canister-dapp-js/vite-plugin-canister-dapp/package.json
@@ -4,6 +4,9 @@
   "version": "0.2.4",
   "author": "Web3NL",
   "bugs": "https://github.com/Web3NL/my-canister-dapp/issues",
+  "dependencies": {
+    "@web3nl/my-canister-dashboard": "0.7.0"
+  },
   "devDependencies": {
     "typedoc": "^0.28.12",
     "typescript": "^5.9.2"
