--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@playwright/test": "1.55.0",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.37.0",
-    "@sveltejs/vite-plugin-svelte": "^6.1.2",
-    "@types/node": "^24.3.0",
-    "dotenv": "^17.2.1",
+    "@sveltejs/vite-plugin-svelte": "6.1.4",
+    "@types/node": "24.3.1",
+    "dotenv": "17.2.2",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.11.0",
+    "eslint-plugin-svelte": "3.12.1",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "knip": "^5.63.0",
+    "knip": "5.63.1",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "sass": "^1.91.0",
+    "sass": "1.92.0",
     "svelte": "^5.38.6",
     "svelte-check": "^4.3.1",
     "syncpack": "^13.0.4",
