--- a/my-canister-dapp-js/my-canister-dashboard-js/package.json
+++ b/my-canister-dapp-js/my-canister-dashboard-js/package.json
@@ -4,12 +4,12 @@
   "version": "0.7.0",
   "author": "Web3NL",
   "dependencies": {
-    "@dfinity/ic-management": "^6.2.2"
+    "@dfinity/ic-management": "7.0.1"
   },
   "devDependencies": {
-    "@dfinity/agent": "^2.4.1",
-    "@dfinity/candid": "^2.4.1",
-    "@dfinity/principal": "^2.4.1"
+    "@dfinity/agent": "^3.2.4",
+    "@dfinity/candid": "^3.2.4",
+    "@dfinity/principal": "^3.2.4"
   },
   "engines": {
     "node": ">=22.0.0"
@@ -38,8 +38,8 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "peerDependencies": {
-    "@dfinity/agent": "^2.4.1",
-    "@dfinity/principal": "^2.4.1"
+    "@dfinity/agent": "^3.2.4",
+    "@dfinity/principal": "^3.2.4"
   },
   "publishConfig": {
     "access": "public"
