--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "@dfinity/agent": "^2.4.1",
-    "@dfinity/auth-client": "^2.4.1",
-    "@dfinity/candid": "^2.4.1",
-    "@dfinity/cmc": "^5.0.8",
-    "@dfinity/ic-management": "^6.2.2",
-    "@dfinity/ledger-icp": "^4.1.0",
-    "@dfinity/principal": "^2.4.1",
-    "@dfinity/utils": "^2.14.0"
+    "@dfinity/agent": "^3.2.4",
+    "@dfinity/auth-client": "^3.2.4",
+    "@dfinity/candid": "^3.2.4",
+    "@dfinity/cmc": "6.0.1",
+    "@dfinity/ic-management": "7.0.1",
+    "@dfinity/ledger-icp": "6.0.0",
+    "@dfinity/principal": "^3.2.4",
+    "@dfinity/utils": "^3.0.1"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
@@ -42,7 +42,7 @@
   "engines": {
     "node": ">=22.0.0"
   },
-  "packageManager": "npm@11.5.2",
+  "packageManager": "npm@11.6.0",
   "private": true,
   "scripts": {
     "build": "npm run build --workspaces",
