--- a/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
+++ b/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
@@ -15,6 +15,8 @@ hex = { workspace = true }
 ic-cdk = { workspace = true }
 pocket-ic = { workspace = true }
 ic-http-certification = { workspace = true }
+ic-ledger-types = { workspace = true }
+flate2 = "1"
 
 my-canister-dashboard = { path = "../my-canister-dashboard" }
 
