--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "my-canister-dapp-js/my-canister-dashboard-js",
     "my-canister-dapp-js/vite-plugin-canister-dapp",
     "my-canister-dapp-js/canister-dashboard-frontend",
+    "my-canister-dapp-js/canister-dapp-installer",
     "my-canister-app",
     "examples/my-hello-world/src/my-hello-world-frontend"
   ]
