--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
     "@dfinity/agent": "^3.2.4",
     "@dfinity/auth-client": "^3.2.4",
     "@dfinity/candid": "^3.2.4",
-    "@dfinity/cmc": "6.0.1",
+    "@dfinity/cmc": "6.0.6",
     "@dfinity/ic-management": "7.0.1",
-    "@dfinity/ledger-icp": "6.0.0",
+    "@dfinity/ledger-icp": "6.1.2",
     "@dfinity/principal": "^3.2.4",
     "@dfinity/utils": "^3.0.1"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
-    "@eslint/js": "9.35.0",
-    "@playwright/test": "1.55.0",
-    "@sveltejs/adapter-static": "^3.0.9",
-    "@sveltejs/kit": "^2.38.1",
-    "@sveltejs/vite-plugin-svelte": "6.2.0",
-    "@types/node": "24.3.1",
-    "dotenv": "17.2.2",
-    "eslint": "^9.35.0",
+    "@eslint/js": "^9.37.0",
+    "@playwright/test": "^1.56.0",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.47.0",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@types/node": "^24.7.2",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "3.12.3",
+    "eslint-plugin-svelte": "^3.12.4",
     "globals": "^16.4.0",
-    "jsdom": "^26.1.0",
-    "knip": "5.63.1",
+    "jsdom": "^27.0.0",
+    "knip": "^5.65.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "sass": "1.92.1",
-    "svelte": "^5.38.9",
-    "svelte-check": "^4.3.1",
+    "sass": "^1.93.2",
+    "svelte": "^5.40.1",
+    "svelte-check": "^4.3.3",
     "syncpack": "^13.0.4",
-    "typedoc": "^0.28.12",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.5",
+    "typedoc": "^0.28.14",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.10",
     "vite-plugin-devtools-json": "^1.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
