--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "@dfinity/agent": "^3.2.4",
-    "@dfinity/auth-client": "^3.2.4",
-    "@dfinity/candid": "^3.2.4",
-    "@dfinity/cmc": "6.0.6",
+    "@dfinity/agent": "^3.4.0",
+    "@dfinity/auth-client": "^3.4.0",
+    "@dfinity/candid": "^3.4.0",
+    "@dfinity/cmc": "^6.0.6",
     "@dfinity/ic-management": "7.0.1",
-    "@dfinity/ledger-icp": "6.1.2",
-    "@dfinity/principal": "^3.2.4",
+    "@dfinity/ledger-icp": "^6.1.2",
+    "@dfinity/principal": "^3.4.0",
     "@dfinity/utils": "^3.0.1"
   },
   "devDependencies": {
